[gd_scene load_steps=36 format=2]

[ext_resource path="res://lib/font/CourierPrime-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes_scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://lib/textures/check_mark_icon_green.png" type="Texture" id=3]
[ext_resource path="res://scenes_scripts/ButtonCreate.gd" type="Script" id=4]
[ext_resource path="res://scenes_scripts/EditScreenContainer.gd" type="Script" id=5]
[ext_resource path="res://scenes_scripts/EditTerms.gd" type="Script" id=6]
[ext_resource path="res://scenes_scripts/EditSubjects.gd" type="Script" id=7]
[ext_resource path="res://lib/textures/arrow.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=22]
size = 200
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=23]
size = 200
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=24]
size = 200
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=25]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=26]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=27]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=28]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=18]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=19]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=20]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=29]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=30]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=31]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=34]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=33]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=35]
size = 50
font_data = ExtResource( 1 )

[node name="Main" type="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
tabs_visible = false
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="SelectorScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="SelectorScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -1046.0
margin_bottom = -847.0
custom_fonts/font = SubResource( 2 )
text = "Learn
or else..."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonAdd" type="Button" parent="SelectorScreen"]
margin_left = 40.0
margin_top = 500.0
margin_right = 1040.0
margin_bottom = 900.0
custom_fonts/font = SubResource( 22 )
text = "+"
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonTest" type="Button" parent="SelectorScreen"]
margin_left = 40.0
margin_top = 1000.0
margin_right = 1040.0
margin_bottom = 1400.0
custom_fonts/font = SubResource( 23 )
text = "?"
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonReview" type="Button" parent="SelectorScreen"]
margin_left = 40.0
margin_top = 1500.0
margin_right = 1040.0
margin_bottom = 1900.0
custom_fonts/font = SubResource( 24 )
text = "///"
__meta__ = {
"_edit_lock_": true
}

[node name="AddScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="AddScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -1119.0
margin_right = -32.0
margin_bottom = -1032.0
custom_fonts/font = SubResource( 25 )
text = "Create a new card"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LabelTerm" type="Label" parent="AddScreen"]
margin_left = 40.0
margin_top = 170.0
margin_right = 222.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 26 )
text = "Term:"
__meta__ = {
"_edit_lock_": true
}

[node name="TextEditTerm" type="TextEdit" parent="AddScreen"]
margin_left = 40.0
margin_top = 280.0
margin_right = 1040.0
margin_bottom = 730.0
custom_fonts/font = SubResource( 27 )
wrap_enabled = true
caret_blink = true
__meta__ = {
"_edit_lock_": true
}

[node name="LabelDefinition" type="Label" parent="AddScreen"]
margin_left = 40.0
margin_top = 800.0
margin_right = 424.0
margin_bottom = 887.0
custom_fonts/font = SubResource( 28 )
text = "Definition:"
__meta__ = {
"_edit_lock_": true
}

[node name="TextEditDefinition" type="TextEdit" parent="AddScreen"]
margin_left = 40.0
margin_top = 900.0
margin_right = 1040.0
margin_bottom = 1900.0
custom_fonts/font = SubResource( 5 )
wrap_enabled = true
caret_blink = true
__meta__ = {
"_edit_lock_": true
}

[node name="LabelSubject" type="Label" parent="AddScreen"]
margin_left = 40.0
margin_top = 1950.0
margin_right = 299.0
margin_bottom = 2037.0
custom_fonts/font = SubResource( 3 )
text = "Subject:"
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonNewSubject" type="Button" parent="AddScreen"]
margin_left = 316.0
margin_top = 1950.0
margin_right = 390.0
margin_bottom = 2024.0
custom_fonts/font = SubResource( 6 )
text = "+"
__meta__ = {
"_edit_lock_": true
}

[node name="OptionButtonSubject" type="OptionButton" parent="AddScreen"]
margin_left = 40.0
margin_top = 2040.0
margin_right = 390.0
margin_bottom = 2090.0
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="LabelTopic" type="Label" parent="AddScreen"]
margin_left = 450.0
margin_top = 1950.0
margin_right = 653.0
margin_bottom = 2037.0
custom_fonts/font = SubResource( 3 )
text = "Topic:"
__meta__ = {
"_edit_lock_": true
}

[node name="OptionButtonTopic" type="OptionButton" parent="AddScreen"]
margin_left = 450.0
margin_top = 2040.0
margin_right = 800.0
margin_bottom = 2090.0
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonNewTopic" type="Button" parent="AddScreen"]
margin_left = 726.0
margin_top = 1950.0
margin_right = 800.0
margin_bottom = 2024.0
custom_fonts/font = SubResource( 9 )
text = "+"
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonCreate" type="Button" parent="AddScreen"]
margin_left = 710.0
margin_top = 2109.0
margin_right = 1045.0
margin_bottom = 2276.0
custom_fonts/font = SubResource( 12 )
text = "Create"
icon = ExtResource( 3 )
align = 0
icon_align = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="ConfirmationDialog" type="PopupDialog" parent="AddScreen/ButtonCreate"]
margin_right = 780.0
margin_bottom = 440.0
popup_exclusive = true

[node name="Label" type="Label" parent="AddScreen/ButtonCreate/ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 13 )
autowrap = true

[node name="ButtonAccept" type="Button" parent="AddScreen/ButtonCreate/ConfirmationDialog"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = -100.0
margin_right = -200.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 14 )
text = "Ok"

[node name="PopupCreateSubject" type="PopupDialog" parent="AddScreen/ButtonCreate"]
margin_right = 780.0
margin_bottom = 440.0
popup_exclusive = true

[node name="Text" type="LineEdit" parent="AddScreen/ButtonCreate/PopupCreateSubject"]
margin_left = 10.0
margin_top = 50.0
margin_right = 770.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 15 )
placeholder_text = "Type here The Subject"

[node name="ButtonOk" type="Button" parent="AddScreen/ButtonCreate/PopupCreateSubject"]
margin_left = 430.0
margin_top = 270.0
margin_right = 630.0
margin_bottom = 370.0
custom_fonts/font = SubResource( 16 )
text = "Ok"

[node name="ButtonCancel" type="Button" parent="AddScreen/ButtonCreate/PopupCreateSubject"]
margin_left = 130.0
margin_top = 270.0
margin_right = 330.0
margin_bottom = 370.0
custom_fonts/font = SubResource( 17 )
text = "Cancel"

[node name="PopupCreateTopic" type="PopupDialog" parent="AddScreen/ButtonCreate"]
margin_right = 780.0
margin_bottom = 440.0

[node name="Text" type="LineEdit" parent="AddScreen/ButtonCreate/PopupCreateTopic"]
margin_left = 10.0
margin_top = 50.0
margin_right = 770.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 18 )
placeholder_text = "Type here The Topic"

[node name="ButtonOk" type="Button" parent="AddScreen/ButtonCreate/PopupCreateTopic"]
margin_left = 430.0
margin_top = 270.0
margin_right = 630.0
margin_bottom = 370.0
custom_fonts/font = SubResource( 19 )
text = "Ok"

[node name="ButtonCancel" type="Button" parent="AddScreen/ButtonCreate/PopupCreateTopic"]
margin_left = 130.0
margin_top = 270.0
margin_right = 330.0
margin_bottom = 370.0
custom_fonts/font = SubResource( 20 )
text = "Cancel"

[node name="TestScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true
}

[node name="ReviewScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="ReviewScreen"]
anchor_right = 1.0
margin_top = 40.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 29 )
text = "Edit, Delete or check your cards"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="ReviewScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -849.0
margin_bottom = -749.0

[node name="ButtonEditTerms" type="Button" parent="ReviewScreen/HBoxContainer"]
margin_right = 534.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 30 )
toggle_mode = true
text = "Terms"

[node name="ButtonEditSubjects" type="Button" parent="ReviewScreen/HBoxContainer"]
margin_left = 538.0
margin_right = 1072.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 31 )
toggle_mode = true
text = "Subjects"

[node name="EditScreenContainer" type="TabContainer" parent="ReviewScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 400.0
tabs_visible = false
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="EditTerms" type="Control" parent="ReviewScreen/EditScreenContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 6 )

[node name="EditSubjects" type="Control" parent="ReviewScreen/EditScreenContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 7 )

[node name="LabelSubject" type="Label" parent="ReviewScreen/EditScreenContainer/EditSubjects"]
margin_left = 40.0
margin_top = 50.0
margin_right = 344.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 34 )
text = "Subject:"

[node name="SubjectSelector" type="ItemList" parent="ReviewScreen/EditScreenContainer/EditSubjects"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 150.0
margin_bottom = -1200.0
custom_fonts/font = SubResource( 33 )
allow_reselect = true

[node name="ButtonSubjectDelete" type="Button" parent="ReviewScreen/EditScreenContainer/EditSubjects"]
margin_left = 80.0
margin_top = 700.0
margin_right = 380.0
margin_bottom = 800.0
custom_fonts/font = SubResource( 35 )
text = "Delete"

[node name="ButtonSubjectEdit" type="Button" parent="ReviewScreen/EditScreenContainer/EditSubjects"]
margin_left = 650.0
margin_top = 700.0
margin_right = 950.0
margin_bottom = 800.0
custom_fonts/font = SubResource( 35 )
text = "Edit"

[node name="Sprite" type="Sprite" parent="ReviewScreen/EditScreenContainer/EditSubjects"]
position = Vector2( 450, 830 )
texture = ExtResource( 9 )
centered = false

[node name="LabelTopic" type="Label" parent="ReviewScreen/EditScreenContainer/EditSubjects"]
margin_left = 40.0
margin_top = 1000.0
margin_right = 344.0
margin_bottom = 1072.0
custom_fonts/font = SubResource( 34 )
text = "Topic:"

[node name="TopicSelector" type="ItemList" parent="ReviewScreen/EditScreenContainer/EditSubjects"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1100.0
margin_bottom = -250.0
custom_fonts/font = SubResource( 33 )

[node name="ButtonTopicDelete" type="Button" parent="ReviewScreen/EditScreenContainer/EditSubjects"]
margin_left = 70.0
margin_top = 1650.0
margin_right = 370.0
margin_bottom = 1750.0
custom_fonts/font = SubResource( 35 )
text = "Delete"

[node name="ButtonTopicEdit" type="Button" parent="ReviewScreen/EditScreenContainer/EditSubjects"]
margin_left = 650.0
margin_top = 1650.0
margin_right = 950.0
margin_bottom = 1750.0
custom_fonts/font = SubResource( 35 )
text = "Edit"

[node name="TestScreenCard" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="TestScreenType" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="SelectorScreen/ButtonAdd" to="." method="change_screen" binds= [ 1 ]]
[connection signal="pressed" from="SelectorScreen/ButtonTest" to="." method="change_screen" binds= [ 2 ]]
[connection signal="pressed" from="SelectorScreen/ButtonReview" to="." method="change_screen" binds= [ 3 ]]
[connection signal="draw" from="AddScreen" to="AddScreen/ButtonCreate" method="refresh_subjects"]
[connection signal="pressed" from="AddScreen/ButtonNewSubject" to="AddScreen/ButtonCreate" method="create_subject"]
[connection signal="item_selected" from="AddScreen/OptionButtonSubject" to="AddScreen/ButtonCreate" method="refresh_topics"]
[connection signal="pressed" from="AddScreen/ButtonNewTopic" to="AddScreen/ButtonCreate" method="create_topic"]
[connection signal="pressed" from="AddScreen/ButtonCreate" to="AddScreen/ButtonCreate" method="on_press"]
[connection signal="pressed" from="AddScreen/ButtonCreate/ConfirmationDialog/ButtonAccept" to="AddScreen/ButtonCreate" method="confirmation_accepted"]
[connection signal="pressed" from="AddScreen/ButtonCreate/PopupCreateSubject/ButtonOk" to="AddScreen/ButtonCreate" method="subject_created"]
[connection signal="pressed" from="AddScreen/ButtonCreate/PopupCreateSubject/ButtonCancel" to="AddScreen/ButtonCreate" method="subject_creation_cancelled"]
[connection signal="pressed" from="AddScreen/ButtonCreate/PopupCreateTopic/ButtonOk" to="AddScreen/ButtonCreate" method="topic_created"]
[connection signal="pressed" from="AddScreen/ButtonCreate/PopupCreateTopic/ButtonCancel" to="AddScreen/ButtonCreate" method="topic_creation_cacelled"]
[connection signal="draw" from="ReviewScreen" to="ReviewScreen/EditScreenContainer/EditSubjects" method="refresh_data"]
[connection signal="pressed" from="ReviewScreen/HBoxContainer/ButtonEditTerms" to="ReviewScreen/EditScreenContainer" method="change_edit_mode" binds= [ 0 ]]
[connection signal="pressed" from="ReviewScreen/HBoxContainer/ButtonEditSubjects" to="ReviewScreen/EditScreenContainer" method="change_edit_mode" binds= [ 1 ]]
[connection signal="gui_input" from="ReviewScreen/EditScreenContainer/EditSubjects/SubjectSelector" to="ReviewScreen/EditScreenContainer/EditSubjects" method="refresh_topic_data"]
[connection signal="item_activated" from="ReviewScreen/EditScreenContainer/EditSubjects/SubjectSelector" to="ReviewScreen/EditScreenContainer/EditSubjects" method="refresh_topic_data"]
[connection signal="item_selected" from="ReviewScreen/EditScreenContainer/EditSubjects/SubjectSelector" to="ReviewScreen/EditScreenContainer/EditSubjects" method="refresh_topic_data"]
[connection signal="pressed" from="ReviewScreen/EditScreenContainer/EditSubjects/ButtonSubjectDelete" to="ReviewScreen/EditScreenContainer/EditSubjects" method="delete_subject"]
[connection signal="pressed" from="ReviewScreen/EditScreenContainer/EditSubjects/ButtonTopicDelete" to="ReviewScreen/EditScreenContainer/EditSubjects" method="delete_topic"]
